--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Americanas</title>
+    <title>Promoções Pascoa</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="icon/image.webp" type="image/webp">
     <style>
@@ -198,7 +198,7 @@
     <!-- Cabeçalho -->
     <header class="header">
         <div class="logo">
-            <span>americanas</span>
+            <span>Feliz Pascoa</span>
         </div>
 
         <div class="search-bar">
@@ -218,7 +218,7 @@
 
     <!-- Conteúdo principal -->
     <div class="container">
-        <h2>Black Friday</h2>
+        <h2>Feliz Pascoa</h2>
         <div class="product-grid">
             <!-- Produtos -->
             <a href="produto/produto.html?id=1" class="product-card">
