--- a/entrega/entrega.html
+++ b/entrega/entrega.html
@@ -169,7 +169,7 @@
     <!-- Cabeçalho -->
     <header class="header">
         <div class="logo">
-            <span>americanas</span>
+            <span>Feliz Pascoa</span>
         </div>
 
         <div class="search-bar">
