--- a/pagamento/pagamento.html
+++ b/pagamento/pagamento.html
@@ -205,7 +205,7 @@
        <!-- Cabeçalho -->
        <header class="header">
         <div class="logo">
-            <span>americanas</span>
+            <span>Feliz Pascoa</span>
         </div>
 
         <div class="search-bar">
